extends Control
@export var main_texture             : TextureRect
@export var preview                  : TextureRect
@export var select_portrait          : ReferenceRect
@export var top_left_button          : TextureButton
@export var down_left_button         : TextureButton
@export var down_right_button        : TextureButton
@export var top_right_button         : TextureButton
